# csa_lab3

./: .coverage  .gitignore  DataPathModel.drawio  README.md  commands_description.txt  golden.py  golden_test.py  input_file  isa.py  machine.py  microcode.py  program_file  pyproject.toml  test.py  translator.py
.github/workflows/: ci.yml
examples/: cat.asm  hello.asm  hello_io.asm  prob1.asm
golden/: cat_asm.yml  hello_asm.yml  hello_io_asm.yml  prob1_asm.yml
logs/: log_output_cat_asm.yml  log_output_hello_asm.yml  log_output_hello_io_asm.yml  log_output_prob1_asm.yml
